<resources>
    <string name="app_name">Nemesis</string>

    <!-- LOGIN SCREEN STRINGS -->
    <string name="signup">Sign Up</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="signin">Sign In</string>


    <!-- NAV BAR STRINGS -->
    <string name="homepage">Homepage</string>
    <string name="profile">Profile</string>
    <string name="workout">Workout</string>
    <string name="cardio">Cardio</string>


    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="usernameSU">Username</string>

    <string name="addworkout">Add Workout</string>
    <string name="workoutname">Workout Name</string>
    <string name="musclegroup">Muscle Group</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="homepage_title">Recent Sports News</string>

</resources>
